<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/weatherStatsContainer"
        android:layout_width="380dp"
        android:layout_height="90dp"
        android:background="@drawable/ic_frame_for_indicators"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/maxMinTemp">

        <LinearLayout
            android:id="@+id/humidityContainer"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/precipitationContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/humidity_icon"
                android:src="@drawable/rain"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:fontFamily="@font/inter"
                android:text="6%"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/precipitationContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/windContainer"
            app:layout_constraintStart_toEndOf="@id/humidityContainer"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/precipitation_icon"
                android:src="@drawable/humidit"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:text="90%"
                android:textColor="@android:color/white"
                android:fontFamily="@font/inter"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/windContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/precipitationContainer"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/wind_icon"
                android:src="@drawable/wind"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:fontFamily="@font/inter"
                android:text="19 km/h"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:id="@+id/locationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="250dp"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/map"
            android:tint="@android:color/white"
            android:contentDescription="@string/location_icon" />

        <TextView
            android:id="@+id/locationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fortaleza"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:fontFamily="@font/inter" />
    </LinearLayout>

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleX="2.5"
        android:scaleY="2.5"
        android:src="@drawable/sunandcloud"
        app:layout_constraintTop_toBottomOf="@id/locationLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/weather_icon" />

    <TextView
        android:id="@+id/temperatureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="28°"
        android:textSize="64sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/weatherIcon"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/inter"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/precipitationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Precipitations"
        android:textSize="18sp"
        android:fontFamily="@font/inter"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/temperatureText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/maxMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:text="Max.: 31°  Min.: 25°"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/precipitationInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dailyForecastContainer"
        android:layout_width="380dp"
        android:layout_height="230dp"
        android:background="@drawable/forecastrectangle"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherStatsContainer">

        <TextView
            android:id="@+id/todayForecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="Today"
            android:fontFamily="@font/inter"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="Mar, 9"
            android:fontFamily="@font/inter"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:id="@+id/forecastDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todayForecast">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="29°C"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/cloudwsun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15.00"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="26°C"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/cloudwsun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16.00"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:background="@drawable/now_time_select"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:fontFamily="@font/inter"
                    android:layout_height="wrap_content"
                    android:text="24°C"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/cloudwsun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="17.00"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter"
                    android:text="23°C"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="86dp"
                    android:layout_height="86dp"
                    android:scaleX="1.5"
                    android:scaleY="1.5"
                    android:src="@drawable/cloudwsun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="18.00"
                    android:fontFamily="@font/inter"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/nextForecastButton"
        style="@style/ButtonImageStyle"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:text="Next Forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyForecastContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>